Update pom.xml versions
* Also update build script versions