@@ -10,7 +10,7 @@
   <packaging>jar</packaging>
   <name>Joda-Convert</name>
   <version>2.2.4-SNAPSHOT</version>
-  <description>Library to convert Objects to and from String</description>
+  <description>Library to convert Objects to and from String, compatible with Java 1.6</description>
   <url>https://www.joda.org/joda-convert/</url>
 
   <!-- ==================================================================== -->
@@ -154,9 +154,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>--add-modules org.joda.convert --module-path ${project.build.directory}/dependencies ${argLine}</argLine>
-        </configuration>
         <executions>
           <!-- execute all suitable tests with guava not present -->
           <execution>
@@ -174,9 +171,39 @@
                 <include>**/TestBooleanObjectArrayStringConverterFactory.java</include>
                 <include>**/TestByteObjectArrayStringConverterFactory.java</include>
                 <include>**/TestCharObjectArrayStringConverterFactory.java</include>
+                <include>**/TestJavaTime.java</include>
                 <include>**/TestJDKStringConverters.java</include>
                 <include>**/TestNumericArrayStringConverterFactory.java</include>
                 <include>**/TestNumericObjectArrayStringConverterFactory.java</include>
+                <include>**/TestRenameHandler.java</include>
+                <include>**/TestStringConvert.java</include>
+                <include>**/TestStringConverterFactory.java</include>
+                <include>**/TestThreeTenBackport.java</include>
+              </includes>
+            </configuration>
+          </execution>
+          <!-- execute all suitable tests with threeten-backport not present -->
+          <execution>
+            <id>no-threetenbp</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>test</phase>
+            <configuration>
+              <classpathDependencyExcludes>
+                <classpathDependencyExclude>org.threeten.bp:threetenbp</classpathDependencyExclude>
+              </classpathDependencyExcludes>
+              <includes>
+                <include>**/TestBooleanArrayStringConverterFactory.java</include>
+                <include>**/TestBooleanObjectArrayStringConverterFactory.java</include>
+                <include>**/TestByteObjectArrayStringConverterFactory.java</include>
+                <include>**/TestCharObjectArrayStringConverterFactory.java</include>
+                <include>**/TestGuavaTypeTokenStringConverter.java</include>
+                <include>**/TestJavaTime.java</include>
+                <include>**/TestJDKStringConverters.java</include>
+                <include>**/TestNumericArrayStringConverterFactory.java</include>
+                <include>**/TestNumericObjectArrayStringConverterFactory.java</include>
+                <include>**/TestRenameHandler.java</include>
                 <include>**/TestStringConvert.java</include>
                 <include>**/TestStringConverterFactory.java</include>
               </includes>
@@ -202,6 +229,7 @@
                 <Export-Package>${joda.osgi.packages}</Export-Package>
                 <Require-Capability>${joda.osgi.require.capability}</Require-Capability>
               </instructions>
+              <supportIncrementalBuild>true</supportIncrementalBuild>
             </configuration>
           </execution>
         </executions>
@@ -472,61 +500,28 @@
             </dependency>
           </dependencies>
         </plugin>
-        <!-- for Eclipse -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>maven-bundle-plugin</artifactId>
-                    <versionRange>[2.5.4,)</versionRange>
-                    <goals>
-                      <goal>manifest</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <versionRange>[3.1.1,)</versionRange>
-                    <goals>
-                      <goal>copy-dependencies</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
   </build>
 
   <!-- ==================================================================== -->
   <dependencies>
-    <!-- The Guava dependency is accessed by reflection, so only needed for tests -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>31.1-jre</version>
-      <scope>test</scope>
+      <version>${guava.version}</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.threeten</groupId>
+      <artifactId>threetenbp</artifactId>
+      <version>${threetenbp.version}</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -782,47 +777,51 @@
 
   <!-- ==================================================================== -->
   <properties>
+    <!-- Dependencies -->
+    <guava.version>33.3.1-jre</guava.version>
+    <junit.version>4.13.2</junit.version>
+    <threetenbp.version>1.7.0</threetenbp.version>
+
     <!-- Common control parameters -->
     <joda.osgi.packages>org.joda.convert.*</joda.osgi.packages>
     <joda.osgi.require.capability>osgi.ee;filter:="(&amp;(osgi.ee=JavaSE)(version=${maven.compiler.source}))"</joda.osgi.require.capability>
     <joda.nexus.auto.release>true</joda.nexus.auto.release>
 
     <!-- Plugin version numbers -->
-    <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
-    <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
+    <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+    <maven-bundle-plugin.version>5.1.9</maven-bundle-plugin.version>
     <maven-changes-plugin.version>2.12.1</maven-changes-plugin.version>
     <maven-checkstyle-plugin.version>3.3.1</maven-checkstyle-plugin.version>
-    <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-    <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-    <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
-    <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
-    <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-    <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
-    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
-    <maven-jxr-plugin.version>3.3.2</maven-jxr-plugin.version>
-    <maven-plugin-plugin.version>3.10.2</maven-plugin-plugin.version>
-    <maven-pmd-plugin.version>3.21.2</maven-pmd-plugin.version>
-    <maven-project-info-reports-plugin.version>3.5.0</maven-project-info-reports-plugin.version>
-    <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+    <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
+    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
+    <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
+    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
+    <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
+    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
+    <maven-javadoc-plugin.version>3.10.1</maven-javadoc-plugin.version>
+    <maven-jxr-plugin.version>3.5.0</maven-jxr-plugin.version>
+    <maven-plugin-plugin.version>3.15.0</maven-plugin-plugin.version>
+    <maven-pmd-plugin.version>3.25.0</maven-pmd-plugin.version>
+    <maven-project-info-reports-plugin.version>3.7.0</maven-project-info-reports-plugin.version>
+    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
     <maven-repository-plugin.version>2.4</maven-repository-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
-    <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>3.2.3</maven-surefire-report-plugin.version>
-    <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
-    <github-api.version>1.318</github-api.version>
+    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
+    <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>3.5.0</maven-surefire-report-plugin.version>
+    <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
+    <github-api.version>1.326</github-api.version>
     <github-release-plugin.version>1.6.0</github-release-plugin.version>
-    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
     <revapi-maven-plugin.version>0.11.1</revapi-maven-plugin.version>
     <revapi-java.version>0.15.1</revapi-java.version>
-    <spotbugs-maven-plugin.version>4.8.2.0</spotbugs-maven-plugin.version>
+    <spotbugs-maven-plugin.version>4.8.6.4</spotbugs-maven-plugin.version>
 
     <!-- Properties for maven-compiler-plugin -->
-    <maven.compiler.compilerVersion>1.6</maven.compiler.compilerVersion>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <maven.compiler.fork>true</maven.compiler.fork>
